--- a/less/widgets/navigation.less
+++ b/less/widgets/navigation.less
@@ -147,7 +147,7 @@ html.nav-open {
 		cursor: pointer;
 		background-color: transparent;
 		background-clip: content-box;
-		margin: -11px 0;
+		margin: -14px 0 0;
 		padding: 0;
 		width: 30px;
 		height: 26px;
@@ -268,6 +268,7 @@ html.nav-open {
 	
 	// This is only shown in Tablet and Mobile
 	@media @tablet {
+		overflow: hidden;
 		border: none;
 		outline: 0;
 		height: 0;
